# webapp

./: Dockerfile  docker-compose-dev.yml  docker-compose.yml  nginx.conf  nginxdev.conf  pyproject.toml
app/: main.py  producer.py
app/api/: dependencies.py
app/api/v1/: api.py
app/core/: dal.py  models.py  mongo_config.py  settings.py
app/utils/: file_update.py  hasher.py  query_format.py
tests/: conftest.py  docker-compose-test.yml  test_dal.py  test_dependencies.py  test_hasher.py  test_model.py
tests/tests_integration/: test_api.py
